# ComputationThread

./: CMakeLists.txt  ComputationObject.h  ComputationThread.cpp  ComputationThread.h  MyObject.cpp  MyObject.h  TestComputationThread.cpp  TestComputationThread.h  main.cpp  main.h  main.ui
